<resources>
    <string name="app_name">Drawing Task</string>
    <string name="action_settings">Settings</string>

    <string name="action_line">Line</string>
    <string name="action_smoothline">Smoothline</string>
    <string name="action_square">Square</string>
    <string name="action_circle">Circle</string>
    <string name="action_rectangle">Rectangle</string>
    <string name="action_triangle">Triangle</string>
    <string name="action_arrow">Arrow</string>
    <string name="palette">Palette</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="black">black</string>
</resources>